# skills

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yml  cspell.config.yaml  pyproject.toml  upstream-skills.lock.json  upstream-skills.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pr-title-lint.yml  sync-upstream-skills.yml
.lavish/: repo-architecture.html
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: agent_stream_text.py  capture_project_skills.py  run_skill_evals.sh  sync_upstream_skills.py  validate_evals.py
skills/agentsmd-generator/: SKILL.md
skills/agentsmd-generator/scripts/: repo-inventory
skills/issue-triage/: SKILL.md
skills/issue-triage/evals/: evals.json
skills/jj-case-insensitive-clone-fix/: SKILL.md
skills/lavish-safe/: NOTICE  SKILL.md
skills/research_codebase/: SKILL.md
skills/sdd-linear/: SKILL.md
skills/sync-upstream/: SKILL.md
skills/taskfile-automation/: SKILL.md
skills/visual-explain/: SKILL.md
skills/work-breakdown/: SKILL.md
tests/: conftest.py  test_agent_stream_text.py  test_assess_linear_sdd_state.py  test_capture_project_skills.py  test_install_linear_agent.py  test_issue_triage_scripts.py  test_jj_clone_diagnose.py  test_repo_inventory.py  test_research_metadata.py  test_skill_contract.py  test_sync_context.py  test_sync_upstream_skills.py  test_upstream_catalog.py  test_validate_evals.py
(+34 files in other folders)
